--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<h1 title="Faggot"><b>$fent</b></h1>
 
 <div class="center">
-	<video width="960px" height="640px" controls>
+	<video width="960px" height="640px" controls autoplay>
 			<source src="cat.mp4" type="video/mp4">
 	Went wrong.
 	</video>
