--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   		text-align: center;
 	}
 	</style>
+	<title>$fent</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="$fent $fent $fent">
 </head>
 
 <body>
@@ -25,7 +29,7 @@
 	<h1 title="Faggot"><b>$fent</b></h1>
 
 <div class="center">
-	<video width="520px" height="320px" controls autoplay>
+	<video id ="myVideo" width="520px" height="320px" controls>
 			<source src="family.mp4" type="video/mp4">
 	Went wrong.
 	</video>
