--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
+			background-position: center;
 			}
 		h1   	{
       			color: grey;
