--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-	<h1 title="Faggot"><b>$fent</b></h1>
+	<h1 title=""><b>$fent</b></h1>
 
 <div class="center">
 	<video id ="myVideo" width="520px" height="320px" controls>
